fix(eww): spacing

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -126,8 +126,7 @@ menubar {
 
   &.revealed {
     color: black;
-    margin: 8px 0;
-    margin-left: 12px;
+    margin: 8px 12px;
     border-radius: 16px;
     padding: 0 6px 0 10px;
     background-color: #a7f3d0;
